added github  auth features
