# swagger.json
@@ -5,25 +5,13 @@
     "description": "The School Tab API with Authentication",
     "version": "1.0.0"
   },
-  "host": "schooltab.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http",
     "https"
   ],
-  "securityDefinitions": {
-    "googleOAuth": {
-      "type": "oauth2",
-      "description": "Google OAuth 2.0 authentication",
-      "flow": "accessCode",
-      "authorizationUrl": "https://accounts.google.com/o/oauth2/v2/auth",
-      "tokenUrl": "https://oauth2.googleapis.com/token",
-      "scopes": {
-        "email": "View your email address",
-        "profile": "View your basic profile info"
-      }
-    }
-  },
+  "securityDefinitions": {},
   "paths": {
     "/api-docs": {
       "get": {
@@ -441,7 +429,7 @@
         }
       }
     },
-    "/auth/google": {
+    "/auth/": {
       "get": {
         "description": "",
         "responses": {
@@ -451,7 +439,7 @@
         }
       }
     },
-    "/auth/google/callback": {
+    "/auth/callback": {
       "get": {
         "description": "",
         "responses": {
@@ -463,11 +451,6 @@
     }
   },
   "security": [
-    {
-      "googleOAuth": [
-        "email",
-        "profile"
-      ]
-    }
+    {}
   ]
 }
